# groonga-normalizer-yamysql

./: Makefile.am  README.md  clean.sh  configure.ac  groonga-normalizer-yamysql.pc.in
data/: remove_phrases_en.json  remove_phrases_ja.json  stopwords_en.json  stopwords_ja.json
normalizers/: Makefile.am  mysql_custom_kana_ci_table.h  mysql_custom_table.h  mysql_unicode_ci_custom_table.h  yamysql.c
test/suite/: hiragana.expected  hiragana.test  hirakata.expected  hirakata.test  hyphen.expected  hyphen.test  kanji_variants.expected  kanji_variants.test  katakana.expected  katakana.test  platform_dependent.expected  platform_dependent.test  returncode.expected  returncode.test  va_line.expected  va_line.test  zero_weight.expected  zero_weight.test
test/suite/custom/: alpha.expected  alpha.test  blank.expected  blank.test  decrease_char.expected  decrease_char.test  escape.expected  escape.test  full.actual  full.expected  full.test  hiragana.expected  hiragana.test  html.expected  html.test  html_unbranced.expected  html_unbranced.test  hyphen.expected  hyphen.test  kanji_variants.expected  kanji_variants.test  katakana.expected  katakana.test  no_escalation.expected  no_escalation.test  partofspeech_default.expected  partofspeech_default.test  partofspeech_table.expected  partofspeech_table.test  platform_dependent.expected  platform_dependent.test  prolong.expected  prolong.test  prolong_last.expected  prolong_last.test  remove_phrase.expected  remove_phrase.test  remove_with_va.expected  remove_with_va.test  (+12 more)
tool/: generate_variants.rb  variants.h
(+36 files in other folders)
